make status-items red if there are issues

--- a/elements/status-item.html
+++ b/elements/status-item.html
@@ -34,7 +34,7 @@
       }
 
       .status-label[has-issues] {
-        background: #FF9800;
+        background: #d50000;
       }
 
       .status-label[loading] {
