--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#17b79a"/>
 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="import" href="elements/issue-list.html">
+    <link rel="import" href="elements/issue-viewer.html">
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
     <title>BitPaper Status</title>
@@ -55,6 +55,9 @@
         <label class="logo-label">BitPaper</label>
       </div>
     </div>
-    <issue-list></issue-list>
+    <issue-viewer
+      known-issues-url="https://api.github.com/repos/TheProfs/bitpaper-status/issues?state=all"
+      service-check-urls="https://api.bitpaper.io, https://bitpaper.io">
+    </issue-viewer>
   </body>
 </html>
