--- a/elements/issue-viewer.html
+++ b/elements/issue-viewer.html
@@ -148,7 +148,7 @@
       },
 
       ready: function() {
-        window.issuesList = this
+        window.issuesViewer = this
 
         this._getAllIssuesWithComments(this.knownIssuesUrl)
           .then(issues => {
