use api/v1/status for auto health check

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <issue-viewer
       known-issues-url="https://api.github.com/repos/TheProfs/bitpaper-status/issues?state=all"
-      service-check-urls="https://api.bitpaper.io, https://bitpaper.io">
+      service-check-urls="https://api.bitpaper.io/api/v1/status, https://bitpaper.io">
     </issue-viewer>
   </body>
 </html>
