ignore PRs in issues

--- a/elements/issue-viewer.html
+++ b/elements/issue-viewer.html
@@ -208,6 +208,7 @@
                 return issue
               })
             })
+            .then(issues => issues.filter(issue => !issue.pull_request))
           })
       },
 
