fixed broken logo

--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
       .logo-container {
         text-align: center;
         color: #777;
+        margin-bottom: 40px;
       }
     </style>
   </head>
   <body>
     <div class="logo-container">
-      <img src="https://bitpaper.io/app/pages/lobby/images/logo.png" width="50" height="47">
-      <div>
-        <label class="logo-label">BitPaper</label>
-      </div>
+      <img src="https://bitpaper.io/app/images/logo.svg" width="142" height="40"/>
     </div>
     <issue-viewer
       known-issues-url="https://api.github.com/repos/TheProfs/bitpaper-status/issues?state=all"
