--- a/elements/issue-viewer.html
+++ b/elements/issue-viewer.html
@@ -53,7 +53,7 @@
         <h3>  Bitpaper seems to be running normally. </h3>
         <p>
           If you believe you found a bug, or you cannot use BitPaper
-          <a href="mailto:hello@bitpaper.io">drop us an email.</a>
+          <a href="mailto:admin@bitpaper.io">drop us an email.</a>
         </p>
       </div>
 
